modules/front-end/src/app/features/safe/safe.component.less
@import "variables";

.main-container {
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: min-content 1fr;

  .menu-container {
    overflow: hidden;
    background-color: #FFFFFF;
    transition: width 500ms;
    height: 100vh;
  }

  &:not(.menu-extended) {
    .menu-container {
      width: 88px;
    }
  }

  &.menu-extended {
    .menu-container {
      width: 252px;
    }
  }

  section.right-container {
    height: 100vh;
    padding-right: 4px;

    .header-container{
      width: 100%;
      height: 60px;
      background-color: #FFFFFF;
      padding: 0 24px;
      margin-bottom: 24px;
    }

    div.router-container {
      overflow: auto;
      background-color: #FFFFFF;
      height: calc(100% - 98px);
      padding: 0 24px;
    }
  }
}

xu-breadcrumb {
  font-size: 2em;
  margin-block-start: 0.67em;
  margin-block-end: 0.67em;
  margin-inline-start: 0;
  margin-inline-end: 0;
  font-weight: bold;
}

